add blocked island region

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,6 +12,7 @@ softdepend:
   - "EssentialsSpawn"
   - "RoseStacker"
   - "WorldEdit"
+  - "WorldGuard"
 loadbefore:
   - "Multiverse-Core"
 commands:
