--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
        <url>https://repo.rosewooddev.io/repository/public/</url>
     </repository>
     
+    <repository>
+       <id>codemc-repo</id>
+       <url>https://repo.codemc.org/repository/maven-public/</url>
+    </repository>
+    
     <!-- WorldEdit/WorldGuard -->
     <repository>
       <id>enginehub-maven</id>
@@ -253,6 +258,13 @@
       <artifactId>XSeries</artifactId>
       <version>8.8.0</version>
       <scope>provided</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>de.tr7zw</groupId>
+      <artifactId>item-nbt-api</artifactId>
+      <version>2.11.1</version>
+      <scope>compile</scope>
     </dependency>
     
     <dependency>
