--- a/pom.xml
+++ b/pom.xml
@@ -271,7 +271,7 @@
       <groupId>com.github.cryptomorin</groupId>
       <artifactId>XSeries</artifactId>
       <version>8.8.0</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
     
     <dependency>
