--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,7 @@
       <groupId>io.papermc</groupId>
       <artifactId>paperlib</artifactId>
       <version>1.0.7</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
     
     <dependency>
